fix padding on mobile screen size

--- a/SalonML/SalonML/src/app/core/home/resume-contact-us/resume-contact-us.component.css
+++ b/SalonML/SalonML/src/app/core/home/resume-contact-us/resume-contact-us.component.css
@@ -75,3 +75,8 @@
 .address-item {
   white-space: nowrap;
 }
+
+.container {
+  padding-left: 40px;
+  padding-right: 40px;
+}
